fix show name overflow

--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -4056,8 +4056,11 @@ body.modal-open {
   border: 1px solid #e7eaec;
   padding: 3%;
   margin-bottom: 20px;
-  overflow: hidden;
+}
+
+.ellipses {
   white-space: nowrap;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
@@ -4100,7 +4103,7 @@ body.modal-open {
 
 @media (min-width: 768px) and (max-width: 991px) {
   .tv-show-box {
-    font-size: 26px;
+    font-size: 24px;
   }
 }
 
